FullBlogPlugin: Some validation fixes:  * `id="main"` was used twice  * missing `alt` attribute for image
Thanks to Scott Dale Robison discovering + suggesting fixes.


git-svn-id: https://trac-hacks.org/svn@5210 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/fullblogplugin/0.11/tracfullblog/htdocs/css/fullblog.css
+++ b/fullblogplugin/0.11/tracfullblog/htdocs/css/fullblog.css
@@ -2,7 +2,7 @@
 ** Styles for the /blog pages and blog items in macros
 */ 
 
-.blog #main {
+.blog #blog-main {
     width: 75%;
     margin: 1em 0em;
     padding-right: 1em;
